# mded

./: .gitignore  README.md  ebff_log.txt  history_log.txt  index.html  package-lock.json  package.json  vite.config.ts
.agents/rules/: no-build.md
md/: notes.md  prompts.md
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/: installer.nsi  installer_hooks.nsh
src/components/: ConfirmDialog.tsx  Dialog.tsx  Editor.tsx  FloatingToc.css  FloatingToc.tsx  Header.tsx  InsertMediaDialog.tsx  Preview.tsx  RecentFilesDialog.tsx  ShortcutDialog.tsx  ToolbarButton.tsx
src/contexts/: ModalContext.tsx
src/hooks/: useHistory.ts  useMarkdownEditor.ts
src/utils/: index.ts  path.ts
